# GameEngine2d

./: .gitignore  CMakeLists.txt
src/: main.cpp  shaders.cpp  shaders.h  spriteRenderer.cpp  spriteRenderer.h
src/math/: mat4.h  math.h  vec2.h  vec3.h
src/shaders/: basic.frag  basic.vert
